add admisia core config & Application form

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -56,7 +56,7 @@
   background: $colorWhite;
 }
 .text-orange {
-  color: $orangeColor;
+  color: $orangeColor !important;
 }
 .box-shadow {
   -webkit-box-shadow: -0.5px 2px 2px 0px rgba(153, 153, 153, 0.5);
