--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -13,6 +13,7 @@
 @import 'footer.scss';
 @import 'sobhan.scss';
 @import '_event_calendar.scss';
+@import 'admisia/_admisia_global_style.scss';
 
 * {
   font-family: 'Montserrat', sans-serif;
