--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -2834,19 +2834,24 @@
     text-align: center;
     padding: 0px 0px 30px 0;
     margin: 4px 0px 0px 10px; }
+  .admisia .custom-dropdown .form-control {
+    color: #818181; }
   .admisia .custom-dropdown .form-control option {
+    color: black;
     padding: 5px 10px; }
-.admisia .custom-upload .custom-file .custom-file-input {
-  border: 0px solid transparent; }
-.admisia .custom-upload .custom-file .custom-file-label {
-  border: 0px solid transparent; }
-  .admisia .custom-upload .custom-file .custom-file-label::after {
-    height: 100%;
-    border-radius: unset;
-    background-color: #ff4e31;
-    color: #fff;
-    font-size: 14px;
-    line-height: 25px; }
+.admisia .custom-upload .custom-file {
+  height: auto; }
+  .admisia .custom-upload .custom-file .custom-file-input {
+    border: 0px solid transparent; }
+  .admisia .custom-upload .custom-file .custom-file-label {
+    border: 0px solid transparent; }
+    .admisia .custom-upload .custom-file .custom-file-label::after {
+      height: 100%;
+      border-radius: unset;
+      background-color: #ff4e31;
+      color: #fff;
+      font-size: 14px;
+      line-height: 25px; }
 .admisia .online-admission-table tbody tr td {
   color: #000;
   font-size: 14px;
@@ -2984,7 +2989,7 @@
   background-color: unset !important; }
 
 .react-datepicker-popper {
-  z-index: 3 !important; }
+  z-index: 2 !important; }
 
 .carousel.slide .carousel-inner {
   max-height: 471px; }
