Admisia Track & Search

--- a/app/assets/scss/_colorScheme.scss
+++ b/app/assets/scss/_colorScheme.scss
@@ -18,3 +18,14 @@ $colorDelayTime: #002749;
 $colorOnLeave: #4e31ff;
 
 $scrollBarColor:#ff4e31aa;
+
+$colorPending: #FF9900;
+$colorPendingBorder: #FFE0B1;
+
+$colorApproved: #007CE8;
+$colorApprovedBorder: #8DCAFF;
+
+$colorRejected: #FF0000;
+$colorRejectedBorder:#FFA7A7;
+
+// colorApprovedBorder
