--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1027,7 +1027,7 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background: transparent;
+    background: rgba(0, 0, 0, 0);
     content: ''; }
   .content-wrapper .book-list-wrapper .book-list-image .book-image-zoom {
     height: 50px;
@@ -2761,6 +2761,20 @@
 .cursor-pointer {
   cursor: pointer; }
 
+.DatePicker {
+  width: 100%; }
+  .DatePicker .DatePicker__input {
+    width: 100%;
+    background: #fff;
+    border: 1px solid #ddd;
+    padding: 0.4em 0.8em;
+    font-family: inherit;
+    text-align: left;
+    border: none;
+    font-size: 1rem;
+    color: #495057;
+    font-weight: 400; }
+
 .rbc-calendar .rbc-toolbar .rbc-btn-group button {
   font-size: 12px; }
 .rbc-calendar .rbc-toolbar .rbc-toolbar-label {
@@ -3095,7 +3109,7 @@
       top: 0;
       height: 100%;
       width: 100%;
-      background: transparent;
+      background: rgba(0, 0, 0, 0);
       content: ''; }
     .image-section .image-section-inside img {
       height: 100%;
