admisia bug fixing form sunchi apu excel-sheet

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -67,6 +67,11 @@
   color: $primaryColorDark !important;
 }
 
+.admisia-level {
+  color: $colorDelayTime;
+  font-size: 14px;
+}
+
 .box-shadow {
   -webkit-box-shadow: -0.5px 2px 2px 0px rgba(153, 153, 153, 0.5);
   -moz-box-shadow: -0.5px 2px 2px 0px rgba(153, 153, 153, 0.5);
