applicationForm Success div design & loader add and bug fixing

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -69,7 +69,23 @@
 
 .admisia-level {
   color: $colorDelayTime;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 15px;
+
+  &.dialog-level {
+    color: $orangeColor;
+  }
+}
+
+.modal-header {
+  .close {
+    opacity: unset;
+  }
+  button {
+    span {
+      color: $colorWhite;
+    }
+  }
 }
 
 .box-shadow {
