--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -29,6 +29,33 @@
   font-weight: bold;
 }
 
+.f-left {
+  float: left;
+}
+
+.f-right {
+  float: right;
+}
+
+.m-r-0 {
+  margin-right: 0;
+}
+
+.m-l-0 {
+  margin-left: 0;
+}
+.p-0 {
+  padding: 0;
+}
+
+.m-b-10 {
+  margin-bottom: 10px;
+}
+
+.m-t-8 {
+  margin-top: 8px;
+}
+
 *::-webkit-scrollbar,
 .nw-layout-content::-webkit-scrollbar {
   width: 14px;
