admisia academic year globally handle and sanchiExcelTab test case  bug fixing complete

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -67,6 +67,10 @@
   color: $primaryColorDark !important;
 }
 
+.level-color {
+  color: $colorDelayTime;
+}
+
 .admisia-level {
   color: $colorDelayTime;
   font-weight: 600;
