--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -333,3 +333,8 @@
     height: 8px !important;
   }
 }
+
+.btn-no-hover {
+  background: $orangeColor !important;
+  color: $colorWhite !important;
+}
