division district added in application form

--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -3071,6 +3071,9 @@
 .m-t-8 {
   margin-top: 8px; }
 
+.m-t-15 {
+  margin-top: 15px; }
+
 *::-webkit-scrollbar,
 .nw-layout-content::-webkit-scrollbar {
   width: 14px;
