--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -90,6 +90,9 @@
 .m-t-8 {
   margin-top: 8px;
 }
+.m-t-15 {
+  margin-top: 15px;
+}
 
 *::-webkit-scrollbar,
 .nw-layout-content::-webkit-scrollbar {
