--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1188,12 +1188,12 @@
 
 .grid-list-wrapper {
   border: 1px solid #f2f2f2;
-  padding: 26px 15px 30px;
+  padding: 20px 0px;
   margin-bottom: 20px; }
   .grid-list-wrapper .grid-image img {
     border-radius: 5px;
-    max-height: 270px;
-    max-width: 270px;
+    max-height: 200px;
+    max-width: 200px;
     /* object-fit: cover; */
     width: 100%; }
   .grid-list-wrapper .grid-image .rounded {
